--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 @plugin "daisyui";
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
 
 body {
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: "Sora", sans-serif;
 }
 
