--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 #root {
   max-width: 1280px;
+  min-width: 320px;
+  min-height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0 20px;
 }
 
